<resources>
    <string name="app_name">School Exeat</string>
    <string name="search_hint_edt">Search</string>
    <string name="label_for_spinner">House:</string>
    <string name="student_details_tv">student\'s name, house and index number</string>
    <string name="search_student_tv">Search student</string>
    <string name="revoke_exeat_btn">Revoke Exeat</string>
    <string name="grant_exeat_btn">Grant Exeat</string>
    <string name="view_details_btn">View Details</string>
    <string name="action_tv">What will you like to do?</string>
    <string name="greeting_tv">Hello username</string>
    <string name="student_name_tv">Name:</string>
    <string name="house_tv">House:</string>
    <string name="class_tv">Class:</string>
    <string name="guardiant_s_contact_tv">Guardiant\'s Contact:</string>
    <string name="student_s_detail_tv">Student\'s Detail</string>
    <string name="from_tv">From:</string>
    <string name="start_date_tv">Start Date</string>
    <string name="grant_exeat_tv">Grant Exeat</string>
    <string name="to_tv">To:</string>
    <string name="end_date_btn">End Date</string>
    <string name="reason_tv">Reason:</string>
    <string name="cancel_btn">Cancel</string>
    <string name="submit_btn">Submit</string>
    <string name="revoke_exeat_tv">Revoke Exeat</string>
    <string name="exeat_history_tv">Exeat History</string>
    <string name="exeat_detail_tv">Exeat Detail</string>
    <string name="result_tv">Result</string>
    <string name="status_tv">Exeat Status</string>
    <string name="password_tv">password</string>
    <string name="username_tv">username</string>
    <string name="logout">logout</string>
    <string name="view_details">View Details</string>
    <string name="promt_tv">What will you like to do?</string>
</resources>